RESOLVED FIXED 259195
CSS Highlights custom-highlight-painting WPT fail due to Position being null
https://bugs.webkit.org/show_bug.cgi?id=259195
Summary CSS Highlights custom-highlight-painting WPT fail due to Position being null
Jessica Cheung
Reported 2023-07-13 10:25:34 PDT
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-13 10:25:54 PDT
Jessica Cheung
Comment 2 2023-07-17 11:09:15 PDT
EWS
Comment 3 2023-07-17 12:46:33 PDT
Committed 266106@main (940410f9ac37): <https://commits.webkit.org/266106@main> Reviewed commits have been landed. Closing PR #15885 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.