CSS Highlights custom-highlight-painting WPT fail due to Position being null https://bugs.webkit.org/show_bug.cgi?id=259195 rdar://112208193

Reviewed by Ryosuke Niwa.

Added null check in updateHighlightPositions for position.
In special test cases where there are identical ranges,
positions used to be overridden, first set to a non-null position,
then set again to null, flipping back and forth.
Changed TestExpectations due to more tests passing.

* LayoutTests/TestExpectations:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::updateHighlightPositions):

Canonical link: https://commits.webkit.org/266106@main